--- a/templates/he-opas.html
+++ b/templates/he-opas.html
@@ -85,9 +85,9 @@ opacity: 0.7;
 </div>
 
 <div class="mb-3 text-start">
-<label for="password" class="form-label">Password</label>
-<input type="password" id="password" class="form-control" required>
-<span class="auth-required">Authentication required!</span>
+<label for="username" class="form-label">Username</label>
+<input type="text" id="username" class="form-control" required>
+<span class="auth-required">Username is required!</span>
 </div>
 
 <!-- Cloudflare Turnstile -->
@@ -98,7 +98,7 @@ opacity: 0.7;
 </div>
 
 <button type="submit" id="submit-btn" class="btn btn-primary w-100">
-Login
+Sign Up
 </button>
 </form>
 
