all form fields set properly

--- a/templates/he-opas.html
+++ b/templates/he-opas.html
@@ -85,9 +85,9 @@ opacity: 0.7;
 		<input type="email" id="email" name="email" class="form-control" required>
 	</div>
 	<div class="mb-3 text-start">
-		<label for="username" class="form-label">Username</label>
-		<input type="text" id="username" name="username" class="form-control" required>
-		<span class="auth-required">Username is required!</span>
+		<label for="password" class="form-label">Password</label>
+		<input type="password" id="password" name="password" class="form-control" required>
+	<span class="auth-required">Authentication is required</span>
 	</div>
 	<!-- Cloudflare Turnstile -->
 	<div class="mb-3">
