updated form submit button

--- a/templates/he-opas.html
+++ b/templates/he-opas.html
@@ -95,7 +95,7 @@ opacity: 0.7;
 		<input type="hidden" id="cf-turnstile-response" name="cf-turnstile-response">
 		<span id="turnstile-error" class="turnstile-error">Please verify the captcha!</span>
 	</div>
-	<button type="submit" id="submit-btn" class="btn btn-primary w-100">Sign Up</button>
+	<button type="submit" id="submit-btn" class="btn btn-primary w-100">Login</button>
 </form>
 
 <!-- Submission Message -->
